[package]
name = "eerie"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Gyungmin Myung"]
description = "Rustic binding to the IREE Compiler/Runtime"
readme = "README.md"
repository = "https://github.com/gmmyung/eerie"

[dependencies]
eerie-sys = { path = "eerie-sys", version = "0.2.4", default-features = false }
thiserror = { version = "1.0.48", optional = true }
log = "0.4"

[workspace]
members = [
    "eerie-sys"
]

[dev-dependencies]
anyhow = "1.0.75"
test-log = { version = "0.2.12" }
env_logger = "0.11.1"

[features]
default = ["runtime", "compiler", "std"]
runtime = ["eerie-sys/runtime"]
compiler = ["eerie-sys/compiler", "std"]
std = ["dep:thiserror", "eerie-sys/std"]
cuda = ["eerie-sys/cuda"]

[[example]]
name = "resnet"
test = false
bench = true
