[package]
name = "eerie"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Gyungmin Myung"]
description = "Rustic binding to the IREE Compiler/Runtime"
readme = "README.md"
repository = "https://github.com/gmmyung/eerie"

[package.metadata.docs.rs]
no-default-features = true
features = ["std", "runtime", "half"]

[dependencies]
eerie-sys = { path = "eerie-sys", version = "0.3.3", default-features = false }
thiserror = { version = "2.0", optional = true }
log = "0.4"
half = { version = "2.7", default-features = false, optional = true }
critical-section = { version = "1.2", optional = true }
libm = { version = "0.2", default-features = false, optional = true }
tinyrlibc = { version = "0.5.1", default-features = false, features = [
    "abs",
    "alloc",
    "atoi",
    "isalpha",
    "isdigit",
    "isspace",
    "isupper",
    "memchr",
    "strcmp",
    "strlen",
    "strncmp",
    "strtoul",
], optional = true }

[workspace]
members = [
    "eerie-sys"
]

[dev-dependencies]
anyhow = "1.0"
test-log = { version = "0.2" }
env_logger = "0.11"

[features]
default = ["runtime", "compiler", "std"]
runtime = ["eerie-sys/runtime", "dep:critical-section", "dep:libm", "dep:tinyrlibc"]
compiler = ["eerie-sys/compiler", "std"]
std = ["dep:thiserror", "eerie-sys/std"]
half = ["dep:half"]
cuda = ["eerie-sys/cuda"]
vulkan = ["eerie-sys/vulkan"]

[[example]]
name = "resnet"
test = false
bench = true
