[package]
name = "eerie-sys"
version = "0.3.0"
edition = "2021"
authors = ["Gyungmin Myung"]
license = "Apache-2.0"
description = "Unsafe raw bindings to the IREE Compiler/Runtime"
homepage = "https://github.com/gmmyung/eerie"
repository = "https://github.com/gmmyung/eerie"
documentation = "https://docs.rs/eerie-sys"
exclude = [
    "iree/third_party/llvm-project/",
    "iree/third_party/torch-mlir/",
    "iree/third_party/webgpu-headers/",
    "iree/third_party/spirv_headers/",
    "iree/third_party/spirv_cross/",
    "iree/third_party/musl/",
    "iree/third_party/stablehlo/",
    "iree/third_party/tracy/",
    "iree/third_party/pybind11/",
    "iree/third_party/renderdoc/",
    "iree/third_party/mkdocs-material/",
    "iree/third_party/flatcc/test/",
    "iree/third_party/flatcc/doc/",
    "iree/third_party/cpuinfo/test/",
    "iree/compiler/src/",
    "iree/compiler/plugins/",
    "iree/compiler/bindings/python/",
    "iree/docs/",
    "iree/llvm-external-projects/",
    "iree/.github/",
    "iree/experimental/",
    "iree/samples/",
    "iree/integrations/",
    "iree/tests/compiler_driver",
    "iree/tests/microbenchmarks",
    "iree/tests/e2e",
    "iree/tests/riscv32",
    "iree/tests/transform_dialect",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["std"]

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
cc = "1.2"

[dependencies]
critical-section = { version = "1.2", optional = true }

[features]
default = ["compiler", "runtime", "std"]
compiler = []
runtime = ["dep:critical-section"]
std = []
cuda = []
